--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
