--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-input-mask": "^3.0.0-alpha.2",
-    "styled-components": "^6.1.15"
+    "react-input-mask": "^3.0.0-alpha.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
